# inferrs

./: Cargo.toml  Makefile  README.md
.gemini/: styleguide.md
.github/workflows/: ci.yml  release.yml
backends/inferrs-backend-metal/: Cargo.toml
backends/inferrs-backend-metal/src/: lib.rs
backends/inferrs-backend-musa/: Cargo.toml
backends/inferrs-backend-musa/src/: lib.rs
backends/inferrs-backend-vulkan/: Cargo.toml
backends/inferrs-backend-vulkan/src/: lib.rs
candle-core/: Cargo.toml
candle-core/benches/: bench_main.rs
candle-core/benches/benchmarks/: conv1d_depthwise.rs  mod.rs
candle-core/src/: conv.rs  cuda_linear_attn.rs  cuda_linear_attn_scan.rs  lib.rs  storage.rs
candle-core/src/cuda_backend/: mod.rs
candle-core/src/metal_backend/: device.rs
candle-core/src/quantized/: dummy_metal.rs  metal.rs  mod.rs
candle-core/tests/: conv_tests.rs
candle-kernels/: build.rs
candle-kernels/src/: conv.cu
candle-nn/src/: kv_cache.rs  ops.rs
inferrs/: Cargo.toml  build.rs
inferrs-benchmark/src/: main.rs
inferrs-kernels/: Cargo.toml
inferrs-kernels/candle-kernels/: build.rs
inferrs-kernels/candle-kernels/src/: conv.cu  lib.rs  linear_attn.cu  linear_attn_scan.cu
inferrs-kernels/candle-metal-kernels/: .cargo_vcs_info.json
inferrs-kernels/candle-metal-kernels/src/: lib.rs
inferrs-kernels/candle-metal-kernels/src/kernels/: quantized.rs  reduce.rs  sdpa.rs
inferrs-kernels/candle-metal-kernels/src/metal/: command_buffer.rs  commands.rs  device.rs  encoder.rs
inferrs-kernels/candle-metal-kernels/src/metal_src/: quantized.metal  scaled_dot_product_attention.metal
inferrs-kernels/src/: lib.rs
inferrs-models/: Cargo.toml
inferrs-models/src/: kv_cache.rs  lib.rs  nvfp4.rs  turbo_quant.rs
inferrs-models/src/models/: gemma4.rs  quantized_linear.rs  qwen3_5.rs  qwen3_5_linear_attn_scan.rs
inferrs-multimodal/: Cargo.toml
inferrs-multimodal/src/: audio.rs  config.rs  ffi.rs  lib.rs  vision_encoder.rs
inferrs/src/: backend.rs  bench.rs  config.rs  engine.rs  grammar.rs  hub.rs  kv_cache.rs  main.rs  modelpack.rs  multimodal_plugin.rs  pull.rs  quantize.rs  run.rs  sampler.rs  server.rs  stop.rs  tokenizer.rs  tool_call_parser.rs  turbo_quant.rs  util.rs
inferrs/src/models/: attention_utils.rs  gemma4.rs  mod.rs  quantized_linear.rs  qwen3.rs  qwen3_5.rs  qwen3_5_linear_attn_scan.rs  vision_encoder.rs
inferrs/tests/: cli.rs  server_integration.rs
inferrs/ui/: index.html
oci-models/: common.go  go.mod  lib.go  main.go
oci-pull/: go.mod  go.sum  main.go
src/: config.rs  engine.rs  kv_cache.rs  main.rs  rm.rs  run.rs  sampler.rs  server.rs  tokenizer.rs  turbo_quant.rs
src/models/: attention_utils.rs  mod.rs  qwen3.rs  qwen3_5.rs
