[package]
name = "inferrs-models"
version = "0.1.0"
edition = "2021"
description = "Shared model implementations and supporting types for inferrs"
license = "Apache-2.0"

[lib]
name = "inferrs_models"
path = "src/lib.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
half = { version = "2.5", features = ["num-traits"] }
rayon = "1"
