[package]
name = "inferrs"
version = "0.1.0"
edition = "2021"
description = "A TurboQuant inference server"
license = "Apache-2.0"

[[bin]]
name = "inferrs"
path = "src/main.rs"

# Optional backends are gated behind Cargo features so the main binary can
# build on hosts without the corresponding vendor toolchain.  Defaults are
# empty — release builds that want a specific backend enable it explicitly
# (e.g. `cargo build --release -p inferrs --features cuda`).  The Makefile
# passes `--features cuda` automatically on Linux / Windows x86_64.
[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "inferrs-models/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "inferrs-models/metal",
]

# On macOS: add libloading to probe for the Vulkan/MoltenVK and OpenVINO
# plugins at runtime.  Metal itself is opt-in via `--features metal`.
[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"


[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (used by `inferrs run` to talk to `inferrs serve`)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dynamic library loading (dlopen/LoadLibrary) — used by pull.rs to load the
# Go OCI shared library (libocimodels) on demand instead of linking at build time.
libloading = "0.8"

# ML / Tensor
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Shared model code + KV cache (workspace-local).  The cuda / metal features
# are added in the target-specific dependency blocks below so the same
# candle-core feature set propagates through inferrs-models.
inferrs-models = { path = "../inferrs-models" }

# Tokenizer
tokenizers = { version = "0.21", features = [] }

# HuggingFace model hub
hf-hub = { version = "0.4", features = ["tokio"] }

# Synchronous HTTP client used to query the HF model card API when GGUF
# metadata lacks general.source.repo_id.
ureq = { version = "2", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Half-precision types (bf16 / f16) — same version as candle-core to share the type
half = { version = "2.5", features = ["num-traits"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
anyhow = { workspace = true }
rayon = "1"
crossterm = "0.28"
indicatif = "0.17"
rustfft = "6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Linux / Android / Windows: libloading for dlopen'ing the backend plugins
# (CUDA / ROCm / CANN / Hexagon / Vulkan / OpenVINO) at runtime.  Note that
# CUDA support itself is gated behind the `cuda` Cargo feature — enabling it
# is what pulls `candle-kernels` (and therefore nvcc / CUDA toolkit) into the
# build.  Hosts without CUDA tooling should build with the default feature
# set (no `cuda`) so the binary compiles cleanly and falls back to CPU / a
# non-CUDA backend plugin at runtime.
[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "windows"))'.dependencies]
libloading = "0.8"

# Linux / Android: libc for low-level dlopen/dlsym used by the CANN HBM
# memory query in engine.rs (aclrtGetMemInfo via RTLD_NOLOAD).
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"


[build-dependencies]
# Used by build.rs to gzip-compress ui/index.html → OUT_DIR/ui.html.gz at
# compile time.  The server embeds the result and serves it in daemon mode.
flate2 = "1"

[dev-dependencies]
serde_json = "1"
