[package]
name = "inferrs"
version = "0.1.0"
edition = "2021"
description = "A TurboQuant inference server"
license = "Apache-2.0"

[[bin]]
name = "inferrs"
path = "src/main.rs"

# Optional backends are gated behind Cargo features so the main binary can
# build on hosts without the corresponding vendor toolchain.  Defaults are
# empty — release builds that want a specific backend enable it explicitly
# (e.g. `cargo build --release -p inferrs --features cuda`).  The Makefile
# passes `--features cuda` automatically on Linux / Windows x86_64.
[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "inferrs-models/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "inferrs-models/metal",
]

# On macOS always enable Metal: the framework ships with every macOS install
# so there is no toolchain concern like there is with CUDA.  The `metal`
# Cargo feature above is still available for explicit opt-in on other
# platforms that may gain Metal support later.  (libloading is declared
# unconditionally in [dependencies] below — no target-specific duplicate
# needed.)
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { workspace = true, features = ["metal"] }
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true, features = ["metal"] }
inferrs-models = { path = "../inferrs-models", features = ["metal"] }


[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (used by `inferrs run` to talk to `inferrs serve`)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dynamic library loading (dlopen/LoadLibrary) — used by pull.rs to load the
# Go OCI shared library (libocimodels) on demand instead of linking at build time.
libloading = "0.8"

# ML / Tensor
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Shared model code + KV cache (workspace-local).  `cuda` propagates through
# the `cuda` Cargo feature defined at the top of this file; `metal` is
# auto-enabled on macOS via the target-specific block above.
inferrs-models = { path = "../inferrs-models" }

# Tokenizer
tokenizers = { version = "0.21", features = [] }

# HuggingFace model hub
hf-hub = { version = "0.4", features = ["tokio"] }

# Synchronous HTTP client used to query the HF model card API when GGUF
# metadata lacks general.source.repo_id.
ureq = { version = "2", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Half-precision types (bf16 / f16) — same version as candle-core to share the type
half = { version = "2.5", features = ["num-traits"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
anyhow = { workspace = true }
rayon = "1"
crossterm = "0.28"
indicatif = "0.17"
rustfft = "6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Linux / Android: libc for low-level dlopen/dlsym used by the CANN HBM
# memory query in engine.rs (aclrtGetMemInfo via RTLD_NOLOAD).  The backend
# plugin probes themselves reuse the unconditional `libloading` dep declared
# in [dependencies] above; CUDA toolkit linkage is gated behind the `cuda`
# Cargo feature.
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"


[build-dependencies]
# Used by build.rs to gzip-compress ui/index.html → OUT_DIR/ui.html.gz at
# compile time.  The server embeds the result and serves it in daemon mode.
flate2 = "1"

[dev-dependencies]
serde_json = "1"
