[package]
name = "inferrs-backend-vulkan"
version = "0.1.0"
edition = "2021"
description = "Vulkan backend plugin for inferrs (probe-only; full acceleration pending candle wgpu support)"
license = "Apache-2.0"

[lib]
name = "inferrs_backend_vulkan"
crate-type = ["cdylib"]

# POSIX platforms (Linux, Android, macOS): dlopen to probe for libvulkan
# without linking against it at build time.
[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos"))'.dependencies]
libc = "0.2"

# Windows (x86_64 and aarch64): LoadLibraryW / FreeLibrary to probe vulkan-1.dll.
# FreeLibrary lives in Win32_Foundation (not Win32_System_LibraryLoader) in
# windows-sys >= 0.59.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }
